--- a/astr596-stellar-spectra-analysis-student.ipynb
+++ b/astr596-stellar-spectra-analysis-student.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "c73b6a45",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#This library stores filter response curves and contains functions to convolve them with spectra\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspeclite\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilters\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msf\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#the library that allows you to read, store, and manipulate tables\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mastropy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtable\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Table\n",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#This library stores filter response curves and contains functions to convolve them with spectra\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspeclite\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilters\u001b[39;00m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#the library that allows you to read, store, and manipulate tables\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mastropy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtable\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Table\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'speclite.filters'"
      ]
     }
@@ -127,127 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "5621f5ee",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=15011</i>\n",
-       "<table id=\"table139769737775872\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>lambda</th><th>flam</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>3465.0</td><td>0.9348064</td></tr>\n",
-       "<tr><td>3465.4</td><td>0.9298626</td></tr>\n",
-       "<tr><td>3465.8</td><td>0.9295582</td></tr>\n",
-       "<tr><td>3466.2</td><td>0.9163543</td></tr>\n",
-       "<tr><td>3466.6</td><td>0.9428962</td></tr>\n",
-       "<tr><td>3467.0</td><td>0.9729065</td></tr>\n",
-       "<tr><td>3467.4</td><td>0.9731162</td></tr>\n",
-       "<tr><td>3467.8</td><td>0.965655</td></tr>\n",
-       "<tr><td>3468.2</td><td>0.9507776</td></tr>\n",
-       "<tr><td>...</td><td>...</td></tr>\n",
-       "<tr><td>9465.4</td><td>0.2157303</td></tr>\n",
-       "<tr><td>9465.8</td><td>0.2157876</td></tr>\n",
-       "<tr><td>9466.2</td><td>0.2135871</td></tr>\n",
-       "<tr><td>9466.601</td><td>0.2129272</td></tr>\n",
-       "<tr><td>9467.0</td><td>0.2132561</td></tr>\n",
-       "<tr><td>9467.4</td><td>0.2155986</td></tr>\n",
-       "<tr><td>9467.8</td><td>0.2142797</td></tr>\n",
-       "<tr><td>9468.2</td><td>0.2163211</td></tr>\n",
-       "<tr><td>9468.601</td><td>0.2146794</td></tr>\n",
-       "<tr><td>9469.0</td><td>0.2090593</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=15011>\n",
-       " lambda     flam  \n",
-       "float64   float64 \n",
-       "-------- ---------\n",
-       "  3465.0 0.9348064\n",
-       "  3465.4 0.9298626\n",
-       "  3465.8 0.9295582\n",
-       "  3466.2 0.9163543\n",
-       "  3466.6 0.9428962\n",
-       "  3467.0 0.9729065\n",
-       "  3467.4 0.9731162\n",
-       "  3467.8  0.965655\n",
-       "  3468.2 0.9507776\n",
-       "     ...       ...\n",
-       "  9465.4 0.2157303\n",
-       "  9465.8 0.2157876\n",
-       "  9466.2 0.2135871\n",
-       "9466.601 0.2129272\n",
-       "  9467.0 0.2132561\n",
-       "  9467.4 0.2155986\n",
-       "  9467.8 0.2142797\n",
-       "  9468.2 0.2163211\n",
-       "9468.601 0.2146794\n",
-       "  9469.0 0.2090593"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=15011</i>\n",
-       "<table id=\"table139769745964688\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>lambda</th><th>flam</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>3465.0</td><td>0.3538652</td></tr>\n",
-       "<tr><td>3465.4</td><td>0.2905372</td></tr>\n",
-       "<tr><td>3465.8</td><td>0.2453179</td></tr>\n",
-       "<tr><td>3466.2</td><td>0.2475912</td></tr>\n",
-       "<tr><td>3466.6</td><td>0.2801426</td></tr>\n",
-       "<tr><td>3467.0</td><td>0.3293486</td></tr>\n",
-       "<tr><td>3467.4</td><td>0.373181</td></tr>\n",
-       "<tr><td>3467.8</td><td>0.3981356</td></tr>\n",
-       "<tr><td>3468.2</td><td>0.4190642</td></tr>\n",
-       "<tr><td>...</td><td>...</td></tr>\n",
-       "<tr><td>9465.4</td><td>0.0001</td></tr>\n",
-       "<tr><td>9465.8</td><td>0.0001</td></tr>\n",
-       "<tr><td>9466.2</td><td>0.0001</td></tr>\n",
-       "<tr><td>9466.601</td><td>0.0001</td></tr>\n",
-       "<tr><td>9467.0</td><td>0.0001</td></tr>\n",
-       "<tr><td>9467.4</td><td>0.0001</td></tr>\n",
-       "<tr><td>9467.8</td><td>0.0001</td></tr>\n",
-       "<tr><td>9468.2</td><td>0.0001</td></tr>\n",
-       "<tr><td>9468.601</td><td>0.0001</td></tr>\n",
-       "<tr><td>9469.0</td><td>0.0001</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=15011>\n",
-       " lambda     flam  \n",
-       "float64   float64 \n",
-       "-------- ---------\n",
-       "  3465.0 0.3538652\n",
-       "  3465.4 0.2905372\n",
-       "  3465.8 0.2453179\n",
-       "  3466.2 0.2475912\n",
-       "  3466.6 0.2801426\n",
-       "  3467.0 0.3293486\n",
-       "  3467.4  0.373181\n",
-       "  3467.8 0.3981356\n",
-       "  3468.2 0.4190642\n",
-       "     ...       ...\n",
-       "  9465.4    0.0001\n",
-       "  9465.8    0.0001\n",
-       "  9466.2    0.0001\n",
-       "9466.601    0.0001\n",
-       "  9467.0    0.0001\n",
-       "  9467.4    0.0001\n",
-       "  9467.8    0.0001\n",
-       "  9468.2    0.0001\n",
-       "9468.601    0.0001\n",
-       "  9469.0    0.0001"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Use an OS command to get the path to your home directory\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m homedir \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHOME\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#here you will need to specify the directory tree that points to your spectrum files.  \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#This directory starts in your home directory so you don't need to type, e.g.  /home/<username>/\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#In the commented code below I've shown you how I did it for my computer but you need to set it up for your computer.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#### Write code here\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#specdir = homedir+'/Work/Teaching/Classes/Astro_596/Fall_2024/Computer_projects/ASTR596_F24/Stellar-spectral-analysis/'\u001b[39;00m\n\u001b[1;32m      9\u001b[0m specdir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/l533c367/ASTR596/My_repositories/Stellar-spectral-analysis\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2.5\u001b[39m \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog10(fnu_star1_gband)\u001b[38;5;66;03m#I put my file address\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
     }
    ],
    "source": [
@@ -878,24 +771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "1ef3f860",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fnu of star1 at the g-band =  1.2e-10\n",
-      "fnu of star1 at the r-band =  1e-10\n",
-      "fnu of star3 at the g-band =  8e-11\n",
-      "fnu of star3 at the r-band =  6e-11\n",
-      "AB of star1 at the g-band =  24.802046884880937\n",
-      "AB of star1 at the r-band =  25.0\n",
-      "AB of star3 at the g-band =  25.24227503252014\n",
-      "AB of star3 at the r-band =  25.55462187404089\n",
-      "g-r color of star1 =  -0.19795311511906277\n",
-      "g-r color of star3 =  -0.31234684152074976\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3192295044.py, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 21\u001b[0;36m\u001b[0m\n\u001b[0;31m    ABmag_st-2.5 * np.log10(fnu_star1_gband)ar1_gband = -2.5 * np.log10(fnu_star1_gband)\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
