--- a/astr596-stellar-spectra-analysis-student.ipynb
+++ b/astr596-stellar-spectra-analysis-student.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5621f5ee",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=15011</i>\n",
-       "<table id=\"table139695868259520\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139801830679824\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>lambda</th><th>flam</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>3465.0</td><td>0.9348064</td></tr>\n",
@@ -182,7 +182,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=15011</i>\n",
-       "<table id=\"table139695865561360\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139801830681360\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>lambda</th><th>flam</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>3465.0</td><td>0.3538652</td></tr>\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "a5b3fc62",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "61dc94d0",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "d7d1eb1e",
    "metadata": {
     "scrolled": true
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "fe0a2fd7",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "b6cb36ae",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "69f53218",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "0f8c8a80",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "514688cf",
    "metadata": {},
    "outputs": [
@@ -751,35 +751,31 @@
    "source": [
     "#### Write code here for 6.1\n",
     "\n",
-    "#put your estimate for the central wavelength here\n",
-    "lamrefg = 4800\n",
+    "#Here I will use the wavelengths that I consider the central ones in the plot\n",
+    "lamrefg = 4800#\n",
     "lamrefr = 6100\n",
-    "\n",
-    "#construct the wavelength difference array for all the star and reference wavelength combinations.\n",
+    "#Here I create the arrays for both stars 1 and 3 and the reference wavlength that I am using\n",
     "star1_difflam_refg = np.abs(star1['lambda']-lamrefg)\n",
     "star1_difflam_refr = np.abs(star1['lambda']-lamrefr)\n",
     "\n",
     "star3_difflam_refg = np.abs(star3['lambda']-lamrefg)\n",
     "star3_difflam_refr = np.abs(star3['lambda']-lamrefr)\n",
     "\n",
-    "#now find the wavelength that is closest to lamref1 by using the 'argmin' function in python\n",
-    "#which returns the index that corresponds to the minimum value\n",
+    "#Here I find the closest wavlength by finding the minimum value using argmin\n",
     "minind_star1_difflam_refg = np.argmin(star1_difflam_refg)\n",
     "minind_star1_difflam_refr = np.argmin(star1_difflam_refr)\n",
     "\n",
     "minind_star3_difflam_refg = np.argmin(star3_difflam_refg)\n",
     "minind_star3_difflam_refr = np.argmin(star3_difflam_refr)\n",
     "\n",
-    "#now we can use this index to find the wavelength and flux closest to the reference \n",
-    "#wavelength by adding on a second index field\n",
-    "#we assign these values to new variables.\n",
+    "#Using this index I will find the wavlength and flux\n",
     "flam_star1_lamrefg = star1['flam'][minind_star1_difflam_refg]\n",
     "flam_star1_lamrefr = star1['flam'][minind_star1_difflam_refr]\n",
     "\n",
     "flam_star3_lamrefg = star3['flam'][minind_star1_difflam_refg]\n",
     "flam_star3_lamrefr = star3['flam'][minind_star1_difflam_refr]\n",
     "\n",
-    "#the frequency corresponding to the reference wavelengths\n",
+    "#finding the frequency first\n",
     "c = 3e18 # I will find the frequency using the speed of light in angstroms\n",
     "nu_refg = c / lamrefg\n",
     "\n",
@@ -834,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "id": "1ef3f860",
    "metadata": {},
    "outputs": [
@@ -842,68 +838,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fnu of star1 at the g-band = 5.43e+14\n",
-      "fnu of star1 at the r-band = 5.00e+14\n",
-      "fnu of star3 at the g-band = 5.43e+14\n",
-      "fnu of star3 at the r-band = 5.00e+14\n",
-      "AB of star1 at the g-band = -85.44\n",
-      "AB of star1 at the r-band = -85.35\n",
-      "AB of star3 at the g-band = -85.44\n",
-      "AB of star3 at the r-band = -85.35\n",
-      "g-r color of star1 = -0.09\n",
-      "g-r color of star3 = -0.09\n"
+      "fnu of star1 at the g-band = 3.81e-20\n",
+      "fnu of star1 at the r-band = 3.09e-20\n",
+      "fnu of star3 at the g-band = 2.91e-20\n",
+      "fnu of star3 at the r-band = 4.47e-20\n",
+      "AB of star1 at the g-band = -0.05\n",
+      "AB of star1 at the r-band = 0.17\n",
+      "AB of star3 at the g-band = 0.24\n",
+      "AB of star3 at the r-band = -0.22\n",
+      "g-r color of star1 = -0.23\n",
+      "g-r color of star3 = 0.46\n"
      ]
     }
    ],
    "source": [
-    "#### Write code here for 6.2\n",
-    "lamgarr = 5150\n",
-    "lamrarr = 6350\n",
+    "#write your code here\n",
     "\n",
-    "star1_lam_m = star1['lambda'] * 10**-10 #Before any calculation I first turn them into angstroms\n",
-    "star3_lam_m = star3['lambda'] * 10**-10\n",
+    "# Define the wavelength ranges for the g-band and r-band in angstroms\n",
+    "lamgarr = 5150  # g-band wavelength in angstroms\n",
+    "lamrarr = 6350  # r-band wavelength in angstroms\n",
     "\n",
-    "#I find the frequencies using the light speed\n",
+    "# The 'star1' and 'star3' lambda arrays are already in angstroms\n",
+    "# These arrays represent the wavelengths at which the flux values (flam) are given\n",
+    "star1_lam_m = star1['lambda']  # Wavelength for star1 in angstroms\n",
+    "star3_lam_m = star3['lambda']  # Wavelength for star3 in angstroms\n",
     "\n",
-    "star1nu = (3*10**8) / star1_lam_m\n",
-    "star3nu = (3*10**8) / star3_lam_m\n",
+    "# Calculate the frequencies (nu) using the speed of light (c = 3e8 m/s)\n",
     "\n",
-    "#Now we find fnu for both stars\n",
-    "fnu_gband_star1 = star1nu[lamgarr]\n",
-    "fnu_rband_star1 = star1nu[lamrarr]\n",
+    "# This converts from angstroms to meters before computing the frequency\n",
+    "star1nu = (3*10**8) / (star1_lam_m * 10**-10)  # Frequency for star1 in Hz\n",
+    "star3nu = (3*10**8) / (star3_lam_m * 10**-10)  # Frequency for star3 in Hz\n",
     "\n",
-    "fnu_gband_star3 = star3nu[lamgarr]\n",
-    "fnu_rband_star3 = star3nu[lamrarr]\n",
+    "# Define a function to convert flux per unit wavelength (f_lambda) to flux per unit frequency (f_nu)\n",
+    "# Flux per unit wavelength is usually given in erg/s/cm²/Å, while flux per unit frequency is erg/s/cm²/Hz\n",
+    "def convert_lambda_to_nu_flux(lambda_array, flam_array):\n",
+    "    c = 3e8  # speed of light in m/s\n",
+    "    lambda_m = lambda_array  # Wavelength in angstroms, used as is for conversion\n",
+    "    f_nu = (flam_array * 10**-10) * (lambda_m**2) / c  # Flux per unit frequency (erg/s/cm²/Hz)\n",
+    "    return f_nu\n",
     "\n",
+    "# Get the flux per unit wavelength (f_lambda) at the relevant wavelengths (g-band and r-band)\n",
+    "# We are looking for the closest wavelength indices for the g-band and r-band\n",
+    "# Use np.abs() to find the closest wavelengths to the target g-band (4800) and r-band (6100)\n",
     "\n",
-    "#print your fnu's here with the following format\n",
+    "flam_gband_star1 = star1['flam'][np.abs(star1['lambda'] - lamgarr).argmin()]  # Flux at g-band for star1\n",
+    "flam_rband_star1 = star1['flam'][np.abs(star1['lambda'] - lamrarr).argmin()]  # Flux at r-band for star1\n",
+    "\n",
+    "flam_gband_star3 = star3['flam'][np.abs(star3['lambda'] - lamgarr).argmin()]  # Flux at g-band for star3\n",
+    "flam_rband_star3 = star3['flam'][np.abs(star3['lambda'] - lamrarr).argmin()]  # Flux at r-band for star3\n",
+    "\n",
+    "# Convert flux per unit wavelength (f_lambda) to flux per unit frequency (f_nu) for both stars\n",
+    "fnu_gband_star1 = convert_lambda_to_nu_flux(lamgarr, flam_gband_star1)  # Flux at g-band for star1 in erg/s/cm²/Hz\n",
+    "fnu_rband_star1 = convert_lambda_to_nu_flux(lamrarr, flam_rband_star1)  # Flux at r-band for star1 in erg/s/cm²/Hz\n",
+    "\n",
+    "fnu_gband_star3 = convert_lambda_to_nu_flux(lamgarr, flam_gband_star3)  # Flux at g-band for star3 in erg/s/cm²/Hz\n",
+    "fnu_rband_star3 = convert_lambda_to_nu_flux(lamrarr, flam_rband_star3)  # Flux at r-band for star3 in erg/s/cm²/Hz\n",
+    "\n",
+    "# Print the flux density per unit frequency (f_nu) values for both stars at g-band and r-band\n",
     "print(f'fnu of star1 at the g-band = {fnu_gband_star1:4.2e}')\n",
     "print(f'fnu of star1 at the r-band = {fnu_rband_star1:4.2e}')\n",
     "print(f'fnu of star3 at the g-band = {fnu_gband_star3:4.2e}')\n",
     "print(f'fnu of star3 at the r-band = {fnu_rband_star3:4.2e}')\n",
     "\n",
-    "#AB mag for each filter and star\n",
-    "#your calculations\n",
-    "\n",
-    "#print your AB mags here with the following format\n",
+    "# The AB magnitude formula: AB = -2.5 * log10(f_nu) - 48.6\n",
+    "# Using the calculated fnu values to compute the AB magnitudes\n",
     "ABmag_star1_gband = -2.5 * np.log10(fnu_gband_star1) - 48.6\n",
     "ABmag_star1_rband = -2.5 * np.log10(fnu_rband_star1) - 48.6\n",
     "ABmag_star3_gband = -2.5 * np.log10(fnu_gband_star3) - 48.6\n",
     "ABmag_star3_rband = -2.5 * np.log10(fnu_rband_star3) - 48.6\n",
     "\n",
-    "#print your AB mags here with the following format\n",
+    "# Print the AB magnitudes for both stars at g-band and r-band\n",
     "print(f'AB of star1 at the g-band = {ABmag_star1_gband:4.2f}')\n",
     "print(f'AB of star1 at the r-band = {ABmag_star1_rband:4.2f}')\n",
     "print(f'AB of star3 at the g-band = {ABmag_star3_gband:4.2f}')\n",
     "print(f'AB of star3 at the r-band = {ABmag_star3_rband:4.2f}')\n",
     "\n",
-    "#g-r color for each star\n",
-    "#your calculations\n",
+    "# Calculate the g-r color index for each star\n",
+    "# The g-r color is the difference between the AB magnitudes in the g-band and r-band\n",
+    "gr_star1 = ABmag_star1_gband - ABmag_star1_rband  # g-r color for star1\n",
+    "gr_star3 = ABmag_star3_gband - ABmag_star3_rband  # g-r color for star3\n",
     "\n",
-    "gr_star1 = ABmag_star1_gband - ABmag_star1_rband\n",
-    "gr_star3 = ABmag_star3_gband - ABmag_star3_rband\n",
-    "\n",
-    "#print your colors here with the following format\n",
+    "# Print the g-r color values for both stars\n",
     "print(f'g-r color of star1 = {gr_star1:1.2f}')\n",
     "print(f'g-r color of star3 = {gr_star3:1.2f}')\n"
    ]
@@ -920,11 +935,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7bfcec75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AB of star1 at the g-band = -0.08\n",
+      "AB of star1 at the r-band = 0.16\n",
+      "AB of star3 at the g-band = 0.47\n",
+      "AB of star3 at the r-band = -0.15\n",
+      "g-r color of star1 = -0.24\n",
+      "g-r color of star3 = 0.62\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "#we need to create \"validated\" wavelength arrays that conform to the \n",
     "#characteristics needed as input by speclite\n",
     "#we use the units module to assign specific units to all wavelength and fluxes, as \n",
@@ -948,17 +977,17 @@
     "ABmag_star3_gband = gband.get_ab_magnitude(star3['flam']*fluxunit,wavelength=star3lam*u.AA)\n",
     "ABmag_star3_rband = rband.get_ab_magnitude(star3['flam']*fluxunit,wavelength=star3lam*u.AA)\n",
     "\n",
-    "print('AB of star1 at the g-band = ', ABmag_star1_gband)\n",
-    "print('AB of star1 at the r-band = ', ABmag_star1_rband)\n",
-    "print('AB of star3 at the g-band = ', ABmag_star3_gband)\n",
-    "print('AB of star3 at the r-band = ', ABmag_star3_rband)\n",
+    "print(f'AB of star1 at the g-band = {ABmag_star1_gband:4.2f}')\n",
+    "print(f'AB of star1 at the r-band = {ABmag_star1_rband:4.2f}')\n",
+    "print(f'AB of star3 at the g-band = {ABmag_star3_gband:4.2f}')\n",
+    "print(f'AB of star3 at the r-band = {ABmag_star3_rband:4.2f}')\n",
     "\n",
     "gr_star1 =ABmag_star1_gband - ABmag_star1_rband\n",
     "gr_star3 = ABmag_star3_gband - ABmag_star3_rband\n",
     "\n",
     "#print your colors here with the following format\n",
-    "print('g-r color of star1 = ', gr_star1)\n",
-    "print('g-r color of star3 = ', gr_star3)\n"
+    "print(f'g-r color of star1 = {gr_star1:.2f}')\n",
+    "print(f'g-r color of star3 = {gr_star3:.2f}')\n"
    ]
   },
   {
