--- a/astr596-stellar-spectra-analysis-student.ipynb
+++ b/astr596-stellar-spectra-analysis-student.ipynb
@@ -1005,7 +1005,7 @@
    "id": "9749076e",
    "metadata": {},
    "source": [
-    "Your answer goes here"
+    "Your answer goes here: As I am using two different wavelengths that is why I had different results, and although it was a different way to solve it I feel is the same process. The last reason is also going to affect the gr colors for both stars. If I compare my results from the results above I see a diferent answers from slight decimals. THis could be firstly and mainly because I am using different wavelengths as range, or this difference could be because the filters shape."
    ]
   }
  ],
